feature(refactor): apply the Google java code style, apply Google checkstyle, remove apache commons dependency, lower spring-expression dependency version